--- a/maven/test-output/emailable-report.html
+++ b/maven/test-output/emailable-report.html
@@ -9,11 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">81</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,602</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.easytrip.testscript.Compaignmodule</td><td><a href="#m0">print</a></td><td rowspan="1">1741586321216</td><td rowspan="1">2</td></tr><tr class="passedodd"><td rowspan="1">com.easytrip.testscript.PotentialModule</td><td><a href="#m1">add</a></td><td rowspan="1">1741586321193</td><td rowspan="1">14</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.easytrack.generic.Baseclass</td><td><a href="#m0">main</a></td><td rowspan="1">1741757514261</td><td rowspan="1">15</td></tr><tr class="passedodd"><td rowspan="1">com.easytrip.pom.HomePage</td><td><a href="#m1">add</a></td><td rowspan="1">1741757514292</td><td rowspan="1">18503</td></tr><tr class="passedeven"><td rowspan="1">com.easytrip.testscript.Compaignmodule</td><td><a href="#m2">print</a></td><td rowspan="1">1741757532799</td><td rowspan="1">2</td></tr><tr class="passedodd"><td rowspan="1">com.easytrip.testscript.PotentialModule</td><td><a href="#m3">add</a></td><td rowspan="1">1741757514285</td><td rowspan="1">3</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.easytrip.testscript.Compaignmodule#print</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">compaign module is created </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.easytrip.testscript.PotentialModule#add</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">potential module is created </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.easytrack.generic.Baseclass#main</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.easytrip.pom.HomePage#add</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.easytrip.testscript.Compaignmodule#print</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">compaign module is created </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.easytrip.testscript.PotentialModule#add</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">potential module is created </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
